Added prefix getting.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve --host 0.0.0.0",
     "build": "docker build -f front.Dockerfile . -t cooletijdgast/discord-web-frontend",
     "push": "docker push cooletijdgast/discord-web-frontend",
+    "build:push": "npm run build && npm run push",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
