--- a/back/package.json
+++ b/back/package.json
@@ -27,6 +27,7 @@
     "discord.js": "^14.8.0",
     "express": "^4.18.2",
     "fluent-ffmpeg": "^2.1.2",
+    "get-audio-duration": "^4.0.1",
     "i18n": "0.13.2",
     "lodash": "4.17.21",
     "lowdb": "1.0.0",
