--- a/back/package.json
+++ b/back/package.json
@@ -31,6 +31,7 @@
     "i18n": "0.13.2",
     "lodash": "4.17.21",
     "lowdb": "1.0.0",
+    "mp3-cutter": "^1.0.6",
     "ytdl-core": "^4.11.5",
     "zod": "^3.23.8"
   },
